Thu Sep 14 15:06:24 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Fix the problem with max_or_terms and termfreqs of 0.  Test
	  maxorterms4 now passes.

Thu Sep 14 15:03:40 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Add a test for doing max_or_terms when one of the query terms is
	  not in the database.

Wed Sep 13 19:07:11 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Small typo in DbTermList::get_termfreq() corrected.  Now works
	  correctly - multiexpand1 passes. :)

Wed Sep 13 18:49:27 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Fix apitest so that the OmBatchEnquire::query_desc structure gets
	  created.

	* Attempt to fix DbTermLists handling of term frequencies: if the
	  termfreq was not present it was being mishandled.  However,
	  multiexpand1 still fails. :(

Wed Sep 13 18:05:19 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* QuartzDbTable now has a get_entry_count() method to ... count its
	  entries.  Also added a test for this.

Wed Sep 13 18:02:38 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* includetest.o now compiled with LIBXML_CFLAGS

Wed Sep 13 17:52:12 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* QuartzDbTables now implemented (as maps) and pass testsuite.

Wed Sep 13 17:34:03 BST 2000 Olly Betts

	* test programs can now take a list of tests to on the command line.

Wed Sep 13 15:34:18 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* OmBatchEnquire::query_desc now initialised its elements to values
	  which will avoid random segfaults in unwary user code.

Wed Sep 13 15:33:35 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Some changes to Python (and general SWIG) bindings to support 
	  new OmDatabase and OmSettings.  There's a bug in there somewhere
	  though.

Wed Sep 13 15:23:26 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>
