@@ -1,4 +1,4 @@
-/* quartz_db_blocks.cc: Storage of a set of database blocks from a quartz db
+/* quartz_db_entries.cc: Storage of a set of entries from a quartz db table
  *
  * ----START-LICENCE----
  * Copyright 1999,2000 BrightStation PLC
@@ -22,44 +22,44 @@
 
 #include "config.h"
 
-#include "quartz_db_blocks.h"
+#include "quartz_db_entries.h"
 
-QuartzDbBlocks::QuartzDbBlocks()
+QuartzDbEntries::QuartzDbEntries()
 {
 }
 
-QuartzDbBlocks::~QuartzDbBlocks()
+QuartzDbEntries::~QuartzDbEntries()
 {
-    std::map<QuartzDbKey, QuartzDbBlock *>::iterator i;
-    for (i = blocks.begin(); i != blocks.end(); i++) {
+    std::map<QuartzDbKey, QuartzDbTag *>::iterator i;
+    for (i = entries.begin(); i != entries.end(); i++) {
 	delete (i->second);
 	i->second = 0;
     }
 }
 
-QuartzDbBlock *
-QuartzDbBlocks::get_block(const QuartzDbKey &key)
+QuartzDbTag *
+QuartzDbEntries::get_tag(const QuartzDbKey &key)
 {
-    std::map<QuartzDbKey, QuartzDbBlock *>::iterator i = blocks.find(key);
-    if (i == blocks.end()) return 0;
+    std::map<QuartzDbKey, QuartzDbTag *>::iterator i = entries.find(key);
+    if (i == entries.end()) return 0;
     return i->second;
 }
 
 void
-QuartzDbBlocks::set_block(const QuartzDbKey &key,
-			  auto_ptr<QuartzDbBlock> data)
+QuartzDbEntries::set_tag(const QuartzDbKey &key,
+			 auto_ptr<QuartzDbTag> data)
 {
-    std::map<QuartzDbKey, QuartzDbBlock *>::iterator i = blocks.find(key);
+    std::map<QuartzDbKey, QuartzDbTag *>::iterator i = entries.find(key);
 
     if (data.get() == 0) {
-	// Don't allow null pointers, for convenience.  (Makes get_block()
+	// Don't allow null pointers, for convenience.  (Makes get_tag()
 	// easier, for a start).
-	auto_ptr<QuartzDbBlock> temp(new QuartzDbBlock());
+	auto_ptr<QuartzDbTag> temp(new QuartzDbTag());
 	data = temp;
     }
 
-    if (i == blocks.end()) {
-	blocks[key] = data.get();
+    if (i == entries.end()) {
+	entries[key] = data.get();
     } else {
 	delete (i->second);
 	i->second = data.get();
